FIXED WORST ERROR EVER! This error took forever to find the topnav overflow was set to hidden for some reason therefore, it hid the dropdown menu on ipads this is now fixed

--- a/http/css/main.css
+++ b/http/css/main.css
@@ -64,7 +64,7 @@ pre {
 }
 /*Beginning of topnav*/
 #topnav {
-    overflow: hidden;
+    overflow: visible;
     position: fixed;
     font-family: 'gotham', 'calibri', 'cambria', 'noto sans', 'sans';
     width: 100%;
